--- a/codeigniter-base.yml
+++ b/codeigniter-base.yml
@@ -31,6 +31,8 @@
       path: /etc/httpd/conf/httpd.conf
       regexp: '^DocumentRoot\s+.+$'
       replace: 'DocumentRoot "/var/www"'
+  - name: Allow Apache to make database network connections
+    shell: setsebool -P httpd_can_network_connect_db=1
   - name: Enable HTTPD as service
     service:
       name: httpd
