--- a/codeigniter-base.yml
+++ b/codeigniter-base.yml
@@ -16,6 +16,10 @@
     package:
       name: php-mysqli
       state: latest
+  - name: Install jq Utility to parse json
+    package:
+      name: jq
+      state: latest
   - name: Get CodeIgniter
     unarchive:
       src: http://github.com/bcit-ci/CodeIgniter/archive/3.1.5.tar.gz
