--- a/ci_apps.yml
+++ b/ci_apps.yml
@@ -4,16 +4,29 @@
 - name: Install All Applications
   hosts: localhost
   tasks:
+  - name: Get the DB Password
+    shell: aws --region us-east-1 --output json ssm get-parameters --names /DDBCorp/CI_Apps/Prod/RDSPassword --with-decryption | jq '.Parameters | from_entries | ."/DDBCorp/CI_Apps/Prod/RDSPassword"' | sed 's/"//g'
+    register: rdsdbpassword
   - name: Install XYZ Application
     git:
       repo: https://github.com/concat/xyz.git
       dest: /var/www/xyz
       clone: yes
       update: yes
+  - name: Insert Production Database password
+    replace:
+      path: /var/www/xyz/config/database.php
+      regexp: 'MYPRODDBPASSWORDHERE'
+      replace: '{{ rdsdbpassword.stdout }}'
   - name: Install UVW Application
     git:
       repo: https://github.com/concat/uvw.git
       dest: /var/www/uvw
       clone: yes
       update: yes
+  - name: Insert Production Database password
+    replace:
+      path: /var/www/uvw/config/database.php
+      regexp: 'MYPRODDBPASSWORDHERE'
+      replace: '{{ rdsdbpassword.stdout }}'
 ...
