--- a/ci_apps.yml
+++ b/ci_apps.yml
@@ -3,6 +3,8 @@
 
 - name: Install All Applications
   hosts: localhost
+  become: yes
+
   tasks:
   - name: Get the DB Password
     shell: aws --region us-east-1 --output json ssm get-parameters --names /DDBCorp/CI_Apps/Prod/RDSPassword --with-decryption | jq '.Parameters | from_entries | ."/DDBCorp/CI_Apps/Prod/RDSPassword"' | sed 's/"//g'
